--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.16",
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
@@ -16,6 +17,7 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
+        "motion": "^12.23.12",
         "swiper": "^11.2.10"
     }
 }
