feat: Implement UI components and update dependencies
This commit introduces a wide range of UI enhancements and new component styles for the application, primarily within `resources/css/app.css`.

Key styling additions include:
- Navigation bar, search, and language switcher.
- Homepage banner and product/service feature cards.
- Article and news sections with custom badges and layouts.
- About page with a milestone swiper.
- Product listing and filtering components.
- A floating contact button and a generic modal.
- Custom Swiper.js pagination styles for different sections.

Additionally, this commit includes updates to both composer and npm dependencies, which may bring in various improvements and bug fixes from third-party libraries.

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
     "require": {
         "php": "^8.2",
         "blade-ui-kit/blade-heroicons": "^2.6",
+        "codeat3/blade-elusive-icons": "^1.5",
+        "codeat3/blade-eos-icons": "^1.15",
+        "davidhsianturi/blade-bootstrap-icons": "^2.1",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
