--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "blade-ui-kit/blade-heroicons": "^2.6",
+        "codeat3/blade-ant-design-icons": "^1.9",
         "codeat3/blade-elusive-icons": "^1.5",
         "codeat3/blade-eos-icons": "^1.15",
         "davidhsianturi/blade-bootstrap-icons": "^2.1",
