--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 /node_modules
 /public/build
 /public/hot
+/public/css/custom-style.css
+/public/fonts/*
 /public/storage
 /public/*.ini
 /storage/*.key
